<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.akhil.calculatorapp.MainActivity">

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="221dp"
        android:text="@string/button9" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn9"
        android:layout_alignBottom="@+id/btn9"
        android:layout_toEndOf="@+id/btn9"
        android:text="@string/button8" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn8"
        android:layout_alignBottom="@+id/btn8"
        android:layout_toEndOf="@+id/btn8"
        android:text="@string/button7" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn9"
        android:layout_below="@+id/btn8"
        android:layout_marginTop="14dp"
        android:text="@string/button6" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn8"
        android:layout_alignTop="@+id/btn6"
        android:text="@string/button5" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn7"
        android:layout_alignTop="@+id/btn5"
        android:text="@string/button4" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn6"
        android:layout_below="@+id/btn6"
        android:layout_marginTop="18dp"
        android:text="@string/button3" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn5"
        android:layout_alignTop="@+id/btn3"
        android:text="@string/button2" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn2"
        android:layout_alignBottom="@+id/btn2"
        android:layout_alignStart="@+id/btn4"
        android:text="@string/button1" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn2"
        android:layout_below="@+id/btn2"
        android:layout_marginTop="20dp"
        android:text="@string/button0" />

    <Button
        android:id="@+id/btnclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn3"
        android:layout_alignTop="@+id/btn0"
        android:text="@string/buttonclear" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn7"
        android:layout_alignBottom="@+id/btn7"
        android:layout_toEndOf="@+id/btn7"
        android:text="@string/buttonplus" />

    <Button
        android:id="@+id/btnsubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn4"
        android:layout_toEndOf="@+id/btn4"
        android:text="@string/buttonminus" />

    <Button
        android:id="@+id/btnmultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn1"
        android:layout_toEndOf="@+id/btn1"
        android:text="@string/buttonproduct" />

    <Button
        android:id="@+id/btndivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn0"
        android:layout_toEndOf="@+id/btn1"
        android:text="@string/buttondiv" />

    <Button
        android:id="@+id/btnequal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn0"
        android:layout_alignBottom="@+id/btn0"
        android:layout_toEndOf="@+id/btn0"
        android:text="@string/buttonequal" />

    <TextView
        android:id="@+id/tvControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn9"
        android:textSize="16sp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="65dp" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvControl"
        android:textSize="20sp"
        android:layout_alignStart="@+id/tvControl"
        android:layout_marginBottom="34dp" />

</RelativeLayout>
